// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BigSquareCarouselBannerWidget tests should handle click action correctly if AppInterface isDefined = false 1`] = `
Array [
  "bannerClicks",
  Object {
    "interPromotion": Object {
      "bannerId": 1578054559059,
      "widgetSubType": 4,
      "widgetType": 5,
    },
  },
]
`;

exports[`BigSquareCarouselBannerWidget tests should handle click action correctly if AppInterface isDefined = false 2`] = `
Array [
  1578054559059,
  5,
  4,
]
`;

exports[`BigSquareCarouselBannerWidget tests should handle click action correctly if AppInterface isDefined = false 3`] = `"/collections/1578054559059?type=5&subtype=4"`;

exports[`BigSquareCarouselBannerWidget tests should handle click action correctly if AppInterface isDefined = false 4`] = `
Array [
  "bannerClicks",
  Object {
    "interPromotion": Object {
      "bannerId": 1578054559060,
      "widgetSubType": 4,
      "widgetType": 5,
    },
  },
]
`;

exports[`BigSquareCarouselBannerWidget tests should handle click action correctly if AppInterface isDefined = false 5`] = `
Array [
  1578054559060,
  5,
  4,
]
`;

exports[`BigSquareCarouselBannerWidget tests should handle click action correctly if AppInterface isDefined = false 6`] = `"/collections/1578054559060?type=5&subtype=4"`;

exports[`BigSquareCarouselBannerWidget tests should handle click action correctly if AppInterface isDefined = false 7`] = `
Array [
  "bannerClicks",
  Object {
    "interPromotion": Object {
      "bannerId": 1578054559062,
      "widgetSubType": 4,
      "widgetType": 5,
    },
  },
]
`;

exports[`BigSquareCarouselBannerWidget tests should handle click action correctly if AppInterface isDefined = false 8`] = `
Array [
  1578054559062,
  5,
  4,
]
`;

exports[`BigSquareCarouselBannerWidget tests should handle click action correctly if AppInterface isDefined = false 9`] = `"/collections/1578054559062?type=5&subtype=4"`;

exports[`BigSquareCarouselBannerWidget tests should handle click action correctly if AppInterface isDefined = false 10`] = `
Array [
  "bannerClicks",
  Object {
    "interPromotion": Object {
      "bannerId": 1578054559063,
      "widgetSubType": 4,
      "widgetType": 5,
    },
  },
]
`;

exports[`BigSquareCarouselBannerWidget tests should handle click action correctly if AppInterface isDefined = false 11`] = `
Array [
  1578054559063,
  5,
  4,
]
`;

exports[`BigSquareCarouselBannerWidget tests should handle click action correctly if AppInterface isDefined = false 12`] = `"/collections/1578054559063?type=5&subtype=4"`;

exports[`BigSquareCarouselBannerWidget tests should handle click action correctly if AppInterface isDefined = true 1`] = `
Array [
  "bannerClicks",
  Object {
    "interPromotion": Object {
      "bannerId": 1578054559059,
      "widgetSubType": 4,
      "widgetType": 5,
    },
  },
]
`;

exports[`BigSquareCarouselBannerWidget tests should handle click action correctly if AppInterface isDefined = true 2`] = `
Array [
  1578054559059,
  5,
  4,
]
`;

exports[`BigSquareCarouselBannerWidget tests should handle click action correctly if AppInterface isDefined = true 3`] = `"/"`;

exports[`BigSquareCarouselBannerWidget tests should handle click action correctly if AppInterface isDefined = true 4`] = `
Array [
  "bannerClicks",
  Object {
    "interPromotion": Object {
      "bannerId": 1578054559060,
      "widgetSubType": 4,
      "widgetType": 5,
    },
  },
]
`;

exports[`BigSquareCarouselBannerWidget tests should handle click action correctly if AppInterface isDefined = true 5`] = `
Array [
  1578054559060,
  5,
  4,
]
`;

exports[`BigSquareCarouselBannerWidget tests should handle click action correctly if AppInterface isDefined = true 6`] = `"/"`;

exports[`BigSquareCarouselBannerWidget tests should handle click action correctly if AppInterface isDefined = true 7`] = `
Array [
  "bannerClicks",
  Object {
    "interPromotion": Object {
      "bannerId": 1578054559062,
      "widgetSubType": 4,
      "widgetType": 5,
    },
  },
]
`;

exports[`BigSquareCarouselBannerWidget tests should handle click action correctly if AppInterface isDefined = true 8`] = `
Array [
  1578054559062,
  5,
  4,
]
`;

exports[`BigSquareCarouselBannerWidget tests should handle click action correctly if AppInterface isDefined = true 9`] = `"/"`;

exports[`BigSquareCarouselBannerWidget tests should handle click action correctly if AppInterface isDefined = true 10`] = `
Array [
  "bannerClicks",
  Object {
    "interPromotion": Object {
      "bannerId": 1578054559063,
      "widgetSubType": 4,
      "widgetType": 5,
    },
  },
]
`;

exports[`BigSquareCarouselBannerWidget tests should handle click action correctly if AppInterface isDefined = true 11`] = `
Array [
  1578054559063,
  5,
  4,
]
`;

exports[`BigSquareCarouselBannerWidget tests should handle click action correctly if AppInterface isDefined = true 12`] = `"/"`;

exports[`BigSquareCarouselBannerWidget tests should render the widget correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  height: 288px;
  min-width: 288px;
  border-radius: 4px;
  padding: 16px 4px 16px 16px;
}

.emotion-1:hover,
.emotion-1:focus,
.emotion-1:visited,
.emotion-1:active {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.emotion-0 {
  border-radius: 4px;
}

<div>
    <div>
      HorizontalSlider Placeholder
    </div>
    <a
      class="emotion-1"
      data-testid="banner-link-0"
      href="/collections/1578054559059?type=5&subtype=4"
    >
      <span
        class=" lazy-load-image-background "
        style="background-image: url(Placeholder.jpg); background-size: 100% 100%; color: transparent; display: inline-block; width: 288px;"
      >
        <img
          class="emotion-0"
          src="https://jiomerchant.akamaized.net/static/delivery_associate/ntHu6tfzRCV2GSKIzlcML83HB0GWBsBDMprjpY2CXlc.png?impolicy=resizeforwidth&w=288"
          width="288"
        />
      </span>
    </a>
    <a
      class="emotion-1"
      data-testid="banner-link-1"
      href="/collections/1578054559060?type=5&subtype=4"
    >
      <span
        class=" lazy-load-image-background "
        style="background-image: url(Placeholder.jpg); background-size: 100% 100%; color: transparent; display: inline-block; width: 288px;"
      >
        <img
          class="emotion-0"
          src="https://jiomerchant.akamaized.net/static/delivery_associate/+azuH9qFDtu5kxoupt6y1iICTJCycuj6BLKpmTs+ns.png?impolicy=resizeforwidth&w=288"
          width="288"
        />
      </span>
    </a>
    <a
      class="emotion-1"
      data-testid="banner-link-2"
      href="/collections/1578054559062?type=5&subtype=4"
    >
      <span
        class=" lazy-load-image-background "
        style="background-image: url(Placeholder.jpg); background-size: 100% 100%; color: transparent; display: inline-block; width: 288px;"
      >
        <img
          class="emotion-0"
          src="https://jiomerchant.akamaized.net/static/delivery_associate/6Al5YfQYDRjrV6QFe38vVbz+HqgTcJFIqTiopiojA.png?impolicy=resizeforwidth&w=288"
          width="288"
        />
      </span>
    </a>
    <a
      class="emotion-1"
      data-testid="banner-link-3"
      href="/collections/1578054559063?type=5&subtype=4"
    >
      <span
        class=" lazy-load-image-background "
        style="background-image: url(Placeholder.jpg); background-size: 100% 100%; color: transparent; display: inline-block; width: 288px;"
      >
        <img
          class="emotion-0"
          src="https://jiomerchant.akamaized.net/static/delivery_associate/+YWaqGy7RqAnDLrsr0p3J4ofDaFvu+YBcnrYKEQYqQ.png?impolicy=resizeforwidth&w=288"
          width="288"
        />
      </span>
    </a>
  </div>
</DocumentFragment>
`;
